# lume-deployment

./: .buildinfo  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.interactive  build-and-push-docker-image.sh  classes.dot  cli.py  index.html  mlflow_env.yml  objects.inv  packages.dot  pv_mapping.yaml  pyproject.toml  readme.md  readme_old.md  requirements.txt
.doctrees/: environment.pickle  index.doctree
.github/workflows/: docker-build.yml  docs.yml  main.yml  python-publish.yml
container_prototype/: .dockerignore  entrypoint.py  env.yaml  main_deploy.py  main_local.py  requirements.txt
container_prototype/k2eg_utils/: utils.py
container_prototype/model_utils/: utils.py
docker/: docker_compose.yml  mymodel.yaml
docs/: Makefile
docs/source/: conf.py  index.rst  interfaces.rst
docs/source/api/: poly_lithic.pre_install.rst  poly_lithic.rst  poly_lithic.scripts.main.rst  poly_lithic.src.cli.rst  poly_lithic.src.config.config_object.rst  poly_lithic.src.config.parser.rst  poly_lithic.src.config.rst  poly_lithic.src.interfaces.BaseInterface.rst  poly_lithic.src.interfaces.file_interface.rst  poly_lithic.src.interfaces.k2eg_interface.rst  poly_lithic.src.interfaces.p4p_interface.rst  poly_lithic.src.logging_utils.make_logger.rst  poly_lithic.src.logging_utils.rst  poly_lithic.src.model_utils.LocalModelGetter.rst  poly_lithic.src.model_utils.ModelGetterBase.rst  poly_lithic.src.model_utils.rst  poly_lithic.src.rst  poly_lithic.src.transformers.BaseTransformers.rst  poly_lithic.src.transformers.CompoundTransformer.rst  poly_lithic.src.transformers.rst  poly_lithic.src.utils.builder.rst  poly_lithic.src.utils.lazyInterfaceLoader.rst  poly_lithic.src.utils.messaging.rst  poly_lithic.src.utils.rst
examples/: adaptive_PID_model.py  image_example.ipynb  image_model.py  model_definition.py  sample_workflow.ipynb  torch_and_generic.ipynb
examples/base/: simple_model.ipynb  simple_model_local.ipynb  simple_model_mlflow.ipynb
examples/base/local/: deployment_config.yaml  model.pth  model_definition.py
examples/base/mlflow_model/: deployment_config.yaml  model_definition.py
examples/generic/: model_definition.py  pv_mapping.yaml
examples/image/: image.ui  image_model.py  pv_mapping.yaml  read_image.ipynb  read_image.py
examples/image_model/: pv_mapping.yaml
examples/lume-model/: lume-model-mlflow.ipynb
examples/simple_continual_learning/: MIMO_sim.py  plotting_client.py  pv_mapping.yaml  readme.md
model_manager/: main.py  pre_install.py  setup.py
model_manager/mm/: cli.py
model_manager/mm/config/: __init__.py  config_object.py
model_manager/mm/interfaces/: BaseInterface.py  __init__.py  env.ini  k2eg_interface.py  p4p_interface.py
model_manager/mm/logging_utils/: __init__.py  make_logger.py
model_manager/mm/model_utils/: LocalModelGetter.py  MlflowModelGetter.py  __init__.py
model_manager/mm/transformers/: BaseTransformers.py  CompoundTransformer.py  SimpleTransformer.py  __init__.py
model_manager/scripts/: main.py
model_manager/src/: cli.py
model_manager/src/config/: __init__.py  config_object.py  parser.py
model_manager/src/interfaces/: __init__.py  file_interface.py  k2eg_interface.py  p4p_interface.py
model_manager/src/logging_utils/: __init__.py  make_logger.py
model_manager/src/model_utils/: LocalModelGetter.py  MlflowModelGetter.py  ModelGetterBase.py  __init__.py  utils.py
model_manager/src/transformers/: BaseTransformer.py  BaseTransformers.py  CompoundTransformer.py  __init__.py
model_manager/src/utils/: builder.py  lazyInterfaceLoader.py  messaging.py
poly_lithic/: pre_install.py
poly_lithic/scripts/: main.py
poly_lithic/src/: cli.py
poly_lithic/src/config/: __init__.py  config_object.py  parser.py
poly_lithic/src/interfaces/: BaseInterface.py  __init__.py  file_interface.py  (+2 more)
tests/: mailbox.py  profile_get_many.py  pv_mapping.yaml  pv_mapping_isolated_nodes.yaml  pv_mapping_mlflow.yaml  pv_mapping_mlflow_legacy.yaml  pv_mapping_nonstandard.yaml  test_builder.py  test_config_parser.py  test_configs.py  test_file_intefrace.py  test_interfaceobserver.py  test_messaging.py  test_messaging_integration.py  test_model_getter.py  test_p4p.py  test_p4p_server.py  test_simple_transformer.py  test_transformers.py
tests/model/: model_definition.py
(+13 files in other folders)
